Fix overflow on tuto page

--- a/style.css
+++ b/style.css
@@ -69,7 +69,6 @@ section.tutorial {
     display: flex;
     gap: 1em;
     padding-block: 1em;
-    width: 100vw;
     box-sizing: border-box;
 }
 
@@ -112,6 +111,7 @@ style[contenteditable]:focus,
 style[contenteditable]:hover {
     box-shadow: rgba(50, 50, 93, 0.25) 0px 70px 100px -20px, rgba(0, 0, 0, 0.5) 0px 30px 60px -30px;
     opacity: 1;
+    outline: none;
 }
 
 style[contenteditable]::before {
